--- a/Terra Planet/Views/HomeTab.storyboard
+++ b/Terra Planet/Views/HomeTab.storyboard
@@ -2,7 +2,9 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -12,8 +14,10 @@
                 <tabBarController restorationIdentifier="HomeTab" storyboardIdentifier="HomeTab" automaticallyAdjustsScrollViewInsets="NO" modalPresentationStyle="currentContext" id="IF4-ff-YAX" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="eqi-82-Vja">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="tintColor" name="color_blue"/>
                     </tabBar>
                     <connections>
                         <segue destination="YbL-1l-GBw" kind="relationship" relationship="viewControllers" id="CnC-Ll-ujO"/>
@@ -34,4 +38,9 @@
             <point key="canvasLocation" x="1186" y="-53"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="color_blue">
+            <color red="0.10980392156862745" green="0.23137254901960785" blue="0.62352941176470589" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+        </namedColor>
+    </resources>
 </document>
