--- a/Terra Planet/Views/Home/Home.storyboard
+++ b/Terra Planet/Views/Home/Home.storyboard
@@ -324,10 +324,10 @@
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bkh-rh-pbC">
-                                <rect key="frame" x="364" y="74" width="30" height="30"/>
+                                <rect key="frame" x="118.5" y="64" width="30" height="30"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="30" id="EvD-54-R00"/>
-                                    <constraint firstAttribute="height" constant="30" id="dzz-Zc-bE7"/>
+                                    <constraint firstAttribute="width" constant="30" id="ii3-vq-eZy"/>
+                                    <constraint firstAttribute="height" constant="30" id="rgU-Ur-BMj"/>
                                 </constraints>
                                 <color key="tintColor" name="color_blue"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -349,7 +349,7 @@
                             <constraint firstItem="cg5-KV-m7c" firstAttribute="top" secondItem="tyW-4m-mfX" secondAttribute="bottom" constant="20" id="As3-P5-GpU"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="3ZH-uc-Ie3" secondAttribute="trailing" constant="20" id="EdC-3q-yX2"/>
                             <constraint firstItem="tyW-4m-mfX" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="GlT-dM-TKM"/>
-                            <constraint firstItem="bkh-rh-pbC" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="30" id="H92-aG-6Dy"/>
+                            <constraint firstItem="bkh-rh-pbC" firstAttribute="leading" secondItem="IN7-Rg-Qia" secondAttribute="trailing" constant="8" id="Js7-W1-cku"/>
                             <constraint firstItem="iXa-oQ-PH0" firstAttribute="top" secondItem="cg5-KV-m7c" secondAttribute="bottom" constant="8" id="LGk-lQ-6B0"/>
                             <constraint firstItem="Flo-e6-6RA" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="N2A-4Y-Y5v"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Flo-e6-6RA" secondAttribute="trailing" constant="20" id="Rf7-tP-PVO"/>
@@ -360,12 +360,12 @@
                             <constraint firstItem="Flo-e6-6RA" firstAttribute="top" secondItem="3ZH-uc-Ie3" secondAttribute="bottom" constant="40" id="hUr-Rb-Sbf"/>
                             <constraint firstItem="iXa-oQ-PH0" firstAttribute="top" secondItem="cg5-KV-m7c" secondAttribute="bottom" constant="8" id="lcd-Qc-dq1"/>
                             <constraint firstItem="IN7-Rg-Qia" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="lzM-e0-efM"/>
+                            <constraint firstItem="bkh-rh-pbC" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="mmH-5b-WwY"/>
                             <constraint firstItem="IN7-Rg-Qia" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="30" id="nmX-XZ-qkU"/>
                             <constraint firstItem="kUb-Wp-1ej" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="pzW-xf-olQ"/>
                             <constraint firstItem="3ZH-uc-Ie3" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="qMr-fX-dUz"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="cg5-KV-m7c" secondAttribute="trailing" constant="20" id="qhk-Pt-gE6"/>
                             <constraint firstItem="3ZH-uc-Ie3" firstAttribute="top" secondItem="IN7-Rg-Qia" secondAttribute="bottom" constant="8" id="rwc-do-th9"/>
-                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="bkh-rh-pbC" secondAttribute="trailing" constant="20" id="wSX-su-vXc"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="Cg3-E4-dfb" secondAttribute="trailing" constant="20" id="wXY-wO-Dup"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="iXa-oQ-PH0" secondAttribute="trailing" constant="20" id="xeA-O0-Ghw"/>
                             <constraint firstItem="iXa-oQ-PH0" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="z2b-Fd-Lou"/>
