move history to another tab

--- a/Terra Planet/Views/History/History.storyboard
+++ b/Terra Planet/Views/History/History.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--HistoryVC-->
+        <!--Transactions-->
         <scene sceneID="s0d-6b-0kx">
             <objects>
                 <viewController restorationIdentifier="HistoryVC" storyboardIdentifier="HistoryVC" id="Y6W-OH-hqX" customClass="HistoryVC" customModule="Terra_Planet" customModuleProvider="target" sceneMemberID="viewController">
@@ -19,6 +19,8 @@
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Transactions" image="eyeglasses" catalog="system" selectedImage="eyeglasses" id="VHj-uw-BXG"/>
+                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -26,6 +28,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="eyeglasses" catalog="system" width="128" height="54"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
