--- a/Terra Planet/Views/Send/Send.storyboard
+++ b/Terra Planet/Views/Send/Send.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_9" orientation="portrait" appearance="light"/>
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
@@ -15,17 +15,17 @@
             <objects>
                 <viewController restorationIdentifier="SendVC" storyboardIdentifier="SendVC" id="Y6W-OH-hqX" customClass="SendVC" customModule="Terra_Planet" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Send To" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SG5-6B-DHq">
-                                <rect key="frame" x="132" y="54" width="111.33333333333331" height="36"/>
+                                <rect key="frame" x="151.5" y="54" width="111" height="36"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="30"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZrI-cU-a4i">
-                                <rect key="frame" x="20" y="146" width="219" height="40"/>
+                                <rect key="frame" x="20" y="146" width="258" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="z7p-IG-diM"/>
                                 </constraints>
@@ -39,7 +39,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="93O-qT-gsx">
-                                <rect key="frame" x="315" y="146" width="40" height="40"/>
+                                <rect key="frame" x="354" y="146" width="40" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="40" id="SGd-9B-4cW"/>
                                     <constraint firstAttribute="height" constant="40" id="kO4-U6-Bsm"/>
@@ -52,7 +52,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lq7-z0-5qd">
-                                <rect key="frame" x="247" y="146" width="60" height="40"/>
+                                <rect key="frame" x="286" y="146" width="60" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="v0h-cM-woB"/>
                                     <constraint firstAttribute="height" constant="40" id="xmi-eH-C3p"/>
@@ -66,13 +66,13 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Coin:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vk1-xx-Wmi">
-                                <rect key="frame" x="19.999999999999996" y="216" width="38.666666666666657" height="18"/>
+                                <rect key="frame" x="20" y="216" width="38.5" height="18"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5b9-9i-4tM">
-                                <rect key="frame" x="20" y="242" width="335" height="60"/>
+                                <rect key="frame" x="20" y="242" width="374" height="60"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="uluna" translatesAutoresizingMaskIntoConstraints="NO" id="7tp-d6-3ae">
                                         <rect key="frame" x="10" y="10" width="40" height="40"/>
@@ -81,20 +81,20 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="LUNA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DTI-mY-BZ8">
-                                        <rect key="frame" x="59.999999999999986" y="0.0" width="224.66666666666663" height="60"/>
+                                        <rect key="frame" x="60" y="0.0" width="264" height="60"/>
                                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.down.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="8fX-9j-Dz8">
-                                        <rect key="frame" x="294.66666666666669" y="21" width="20.333333333333314" height="19"/>
+                                        <rect key="frame" x="334" y="20.5" width="20" height="19"/>
                                         <color key="tintColor" name="color_blue"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="8fX-9j-Dz8" secondAttribute="height" multiplier="1:1" id="W4x-M8-VUS"/>
                                         </constraints>
                                     </imageView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oeX-nN-xee">
-                                        <rect key="frame" x="0.0" y="0.0" width="335" height="60"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="60"/>
                                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                         <connections>
                                             <action selector="selectCoin:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="ofM-v9-k5s"/>
@@ -134,7 +134,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="0" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LeD-WW-6Ia">
-                                <rect key="frame" x="20" y="380" width="225" height="40"/>
+                                <rect key="frame" x="20" y="380" width="264" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="kh8-lZ-BVT"/>
                                 </constraints>
@@ -145,7 +145,7 @@
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PbB-V8-a4V">
-                                <rect key="frame" x="255" y="380" width="100" height="40"/>
+                                <rect key="frame" x="294" y="380" width="100" height="40"/>
                                 <color key="backgroundColor" name="color_blue"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="N32-6R-fMN"/>
@@ -165,7 +165,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Balance: 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gmb-nK-yTO">
-                                <rect key="frame" x="235.66666666666666" y="332" width="59.333333333333343" height="40"/>
+                                <rect key="frame" x="274.5" y="332" width="59.5" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Kil-If-0pE"/>
                                 </constraints>
@@ -174,7 +174,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZwA-mc-pWS">
-                                <rect key="frame" x="295" y="332" width="70" height="40"/>
+                                <rect key="frame" x="334" y="332" width="70" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="Ev0-mk-tb2"/>
                                     <constraint firstAttribute="width" constant="70" id="F35-y1-4HU"/>
@@ -187,6 +187,23 @@
                                     <action selector="sendAll:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="wew-pT-USr"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Memo (optional):" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jad-Ec-G2v">
+                                <rect key="frame" x="20" y="440" width="117" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="61O-Uo-apF">
+                                <rect key="frame" x="20" y="466" width="374" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="LtA-UZ-ir1"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="Y6W-OH-hqX" id="BZG-UY-ak8"/>
+                                </connections>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -204,15 +221,20 @@
                             <constraint firstItem="uHd-LO-PwC" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="Kdk-FR-oV7"/>
                             <constraint firstItem="93O-qT-gsx" firstAttribute="leading" secondItem="lq7-z0-5qd" secondAttribute="trailing" constant="8" id="Kln-5v-Yb8"/>
                             <constraint firstItem="PbB-V8-a4V" firstAttribute="leading" secondItem="LeD-WW-6Ia" secondAttribute="trailing" constant="10" id="Mi3-Fu-luu"/>
+                            <constraint firstItem="61O-Uo-apF" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="PqU-Uw-nMv"/>
                             <constraint firstItem="LeD-WW-6Ia" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="Pqa-fB-mj5"/>
                             <constraint firstItem="ZwA-mc-pWS" firstAttribute="leading" secondItem="gmb-nK-yTO" secondAttribute="trailing" id="VaP-uw-HgT"/>
                             <constraint firstItem="PbB-V8-a4V" firstAttribute="top" secondItem="tVV-pL-9zk" secondAttribute="bottom" constant="8" id="ZF7-y4-HqC"/>
+                            <constraint firstItem="Jad-Ec-G2v" firstAttribute="top" secondItem="LeD-WW-6Ia" secondAttribute="bottom" constant="20" id="Zpo-qj-X3T"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="PbB-V8-a4V" secondAttribute="trailing" constant="20" id="apu-IJ-osB"/>
                             <constraint firstItem="SG5-6B-DHq" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="10" id="c4r-ya-buq"/>
                             <constraint firstItem="5b9-9i-4tM" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="d73-YD-Y3g"/>
+                            <constraint firstItem="Jad-Ec-G2v" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="dV4-qX-at0"/>
                             <constraint firstItem="ZwA-mc-pWS" firstAttribute="top" secondItem="5b9-9i-4tM" secondAttribute="bottom" constant="30" id="i5e-CP-qkx"/>
                             <constraint firstItem="Vk1-xx-Wmi" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="kPZ-Or-ae2"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="93O-qT-gsx" secondAttribute="trailing" constant="20" id="oJo-5E-nNO"/>
+                            <constraint firstItem="61O-Uo-apF" firstAttribute="top" secondItem="Jad-Ec-G2v" secondAttribute="bottom" constant="8" id="oVR-5J-e57"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="61O-Uo-apF" secondAttribute="trailing" constant="20" id="pgT-Im-dXm"/>
                             <constraint firstItem="tVV-pL-9zk" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="qF3-2W-8sp"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="ZwA-mc-pWS" secondAttribute="trailing" constant="10" id="sqy-jG-2Aw"/>
                             <constraint firstItem="uHd-LO-PwC" firstAttribute="top" secondItem="SG5-6B-DHq" secondAttribute="bottom" constant="30" id="vQc-sx-UCv"/>
@@ -227,6 +249,7 @@
                         <outlet property="coinLogo" destination="7tp-d6-3ae" id="wxq-zz-FC7"/>
                         <outlet property="coinName" destination="DTI-mY-BZ8" id="I01-Ed-7Mv"/>
                         <outlet property="coinView" destination="5b9-9i-4tM" id="yWC-PL-RLb"/>
+                        <outlet property="memo" destination="61O-Uo-apF" id="pC5-GT-rNg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
