--- a/Terra Planet/Views/Settings/Settings.storyboard
+++ b/Terra Planet/Views/Settings/Settings.storyboard
@@ -34,9 +34,9 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="dmK-LS-Bor">
-                                        <rect key="frame" x="228" y="20" width="131" height="31"/>
+                                        <rect key="frame" x="209" y="20" width="150" height="31"/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="131" id="Pb6-e6-ze9"/>
+                                            <constraint firstAttribute="width" constant="150" id="Pb6-e6-ze9"/>
                                         </constraints>
                                         <segments>
                                             <segment title="UST"/>
@@ -59,7 +59,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vn4-eT-9DE">
-                                <rect key="frame" x="117" y="230" width="180" height="40"/>
+                                <rect key="frame" x="117" y="320" width="180" height="40"/>
                                 <color key="backgroundColor" name="color_blue"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="2DE-18-FWu"/>
@@ -80,7 +80,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bQV-fS-LRv">
-                                <rect key="frame" x="138" y="300" width="138" height="30"/>
+                                <rect key="frame" x="138" y="390" width="138" height="30"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <color key="tintColor" systemColor="systemPinkColor"/>
                                 <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -89,19 +89,56 @@
                                     <action selector="deleteAccount:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="Xur-5q-XSQ"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zuN-WR-3Cr">
+                                <rect key="frame" x="20" y="220" width="374" height="70"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Network" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mvh-ek-DBp">
+                                        <rect key="frame" x="10" y="0.0" width="64.5" height="70"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="qQ8-ND-Sj9">
+                                        <rect key="frame" x="209" y="20" width="150" height="31"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="150" id="cxk-aT-DE1"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="testnet"/>
+                                            <segment title="mainnet"/>
+                                        </segments>
+                                        <connections>
+                                            <action selector="changeGas:" destination="Y6W-OH-hqX" eventType="valueChanged" id="8V2-tj-mvM"/>
+                                        </connections>
+                                    </segmentedControl>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="qQ8-ND-Sj9" secondAttribute="bottom" constant="20" id="EnA-00-F2h"/>
+                                    <constraint firstAttribute="height" constant="70" id="MsZ-3i-dNT"/>
+                                    <constraint firstItem="qQ8-ND-Sj9" firstAttribute="top" secondItem="zuN-WR-3Cr" secondAttribute="top" constant="20" id="OZI-sR-zxE"/>
+                                    <constraint firstItem="Mvh-ek-DBp" firstAttribute="leading" secondItem="zuN-WR-3Cr" secondAttribute="leading" constant="10" id="Q0v-Yb-fHO"/>
+                                    <constraint firstItem="Mvh-ek-DBp" firstAttribute="top" secondItem="zuN-WR-3Cr" secondAttribute="top" id="bi3-3y-H9k"/>
+                                    <constraint firstAttribute="bottom" secondItem="Mvh-ek-DBp" secondAttribute="bottom" id="eAh-5g-smA"/>
+                                    <constraint firstAttribute="trailing" secondItem="qQ8-ND-Sj9" secondAttribute="trailing" constant="15" id="udD-Nt-oaq"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="bQV-fS-LRv" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="1od-72-0M7"/>
                             <constraint firstItem="Vn4-eT-9DE" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="AOK-lq-SsE"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zuN-WR-3Cr" secondAttribute="trailing" constant="20" id="Aal-u9-yt4"/>
                             <constraint firstItem="7fL-fE-aCM" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="20" id="CHx-CT-7Eb"/>
                             <constraint firstItem="7fL-fE-aCM" firstAttribute="top" secondItem="eeN-1C-NIt" secondAttribute="bottom" constant="30" id="Icb-cg-zh8"/>
-                            <constraint firstItem="Vn4-eT-9DE" firstAttribute="top" secondItem="7fL-fE-aCM" secondAttribute="bottom" constant="30" id="Ko4-ZA-J9d"/>
+                            <constraint firstItem="zuN-WR-3Cr" firstAttribute="top" secondItem="7fL-fE-aCM" secondAttribute="bottom" constant="20" id="Jeb-4L-gEt"/>
                             <constraint firstItem="bQV-fS-LRv" firstAttribute="top" secondItem="Vn4-eT-9DE" secondAttribute="bottom" constant="30" id="LCM-11-qVa"/>
                             <constraint firstItem="eeN-1C-NIt" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" constant="20" id="N4i-P8-DAn"/>
                             <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="7fL-fE-aCM" secondAttribute="trailing" constant="20" id="UG0-2i-hF0"/>
+                            <constraint firstItem="zuN-WR-3Cr" firstAttribute="leading" secondItem="5EZ-qb-Rvc" secondAttribute="leading" constant="20" id="YaF-iw-FIU"/>
                             <constraint firstItem="eeN-1C-NIt" firstAttribute="centerX" secondItem="5EZ-qb-Rvc" secondAttribute="centerX" id="oMr-JE-Kpj"/>
+                            <constraint firstItem="Vn4-eT-9DE" firstAttribute="top" secondItem="zuN-WR-3Cr" secondAttribute="bottom" constant="30" id="yIG-pw-tbL"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Settings" image="gearshape" catalog="system" selectedImage="gearshape.fill" id="nxO-Ll-32K"/>
@@ -109,6 +146,8 @@
                     <connections>
                         <outlet property="gasSelector" destination="dmK-LS-Bor" id="BnQ-vo-96i"/>
                         <outlet property="gasView" destination="7fL-fE-aCM" id="MfT-N1-VGG"/>
+                        <outlet property="netView" destination="zuN-WR-3Cr" id="S6s-eN-jOP"/>
+                        <outlet property="networkSelector" destination="qQ8-ND-Sj9" id="eOr-XQ-dln"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
